src/objects/Business_Planning__c.object
<CustomObject>
    <fields>
        <fullName>Molecule_Name__c</fullName>
        <formula>Indication__r.Molecule__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Molecule Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observational_Study_Details__c</fullName>
        <label>Study Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Study_Sub_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Site Based</fullName>
                </value>
                <value>
                    <fullName>Non-site Based</fullName>
                </value>
                <value>
                    <fullName>Data Mart</fullName>
                </value>
                <value>
                    <fullName>External Source (including Data Broker)</fullName>
                </value>
                <value>
                    <fullName>TPO Managed Data</fullName>
                </value>
                <value>
                    <fullName>Internal - Other</fullName>
                </value>
                <value>
                    <fullName>Registries</fullName>
                </value>
                <value>
                    <fullName>Purpose - Regulatory</fullName>
                </value>
                <value>
                    <fullName>Purpose - Non-Regulatory</fullName>
                </value>
                <value>
                    <fullName>Direct Impact to Treatment</fullName>
                </value>
                <value>
                    <fullName>No Direct Impact to Treatment</fullName>
                </value>
                <value>
                    <fullName>Chart Review</fullName>
                </value>
                <value>
                    <fullName>Lilly Trial Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrgAddress_TF__c</fullName>
        <description>Technical Field to Store Org Address. Used in 3 BP Email Templates.</description>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Technical Field to Store Org Address. Used in 3 BP Email Templates.</inlineHelpText>
        <label>OrgAddress TF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Sub_Function__c</fullName>
        <label>Other Sub-Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Variance_Against_Vo__c</fullName>
        <label>Overall Variance Against Vo</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Add the Project Manager or facilitator that supports your area.  Their name will be added to the study team by adding it to this field.</inlineHelpText>
        <label>PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_Business_Plannings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_of_Holistic_Evidence_Plan_HEP__c</fullName>
        <description>Does the study/project contribute to the Holistic Evidence Plan (HEP) for the asset?</description>
        <inlineHelpText>Does the Study/Project contribute to the Holistic Evidence Plan (HEP) for the asset?</inlineHelpText>
        <label>Part of Holistic Evidence Plan (HEP)?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payee_Description__c</fullName>
        <description>Indicate the person, organization or company being compensated.</description>
        <inlineHelpText>Indicate the person, organization or company being compensated.</inlineHelpText>
        <label>Payee Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-clinical Development</fullName>
                </value>
                <value>
                    <fullName>Phase I</fullName>
                </value>
                <value>
                    <fullName>Phase II</fullName>
                </value>
                <value>
                    <fullName>Phase III</fullName>
                </value>
                <value>
                    <fullName>Submission/Registration</fullName>
                </value>
                <value>
                    <fullName>Post Launch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Purpose__c</fullName>
        <label>Primary Purpose of the Study/Project</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advancing Health Economics and Outcomes Research (HEOR) Methods</fullName>
                </value>
                <value>
                    <fullName>Advancing Health Policy Environment</fullName>
                </value>
                <value>
                    <fullName>Benefit Risk Assessment</fullName>
                </value>
                <value>
                    <fullName>Clinical Outcome Assessment Measure Development</fullName>
                </value>
                <value>
                    <fullName>Commercial Commitment</fullName>
                </value>
                <value>
                    <fullName>FDAMA 114</fullName>
                </value>
                <value>
                    <fullName>HTA Toolkit</fullName>
                </value>
                <value>
                    <fullName>Local Payer Dossier/HTA Submission</fullName>
                </value>
                <value>
                    <fullName>Medical Communications</fullName>
                </value>
                <value>
                    <fullName>Regulatory Commitment</fullName>
                </value>
                <value>
                    <fullName>Regulatory Strategy</fullName>
                </value>
                <value>
                    <fullName>Strategic Input</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Value_Area__c</fullName>
        <label>Primary Value Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access &amp; Reimbursement</fullName>
                    <color>#0B6FCE</color>
                    <label>Access &amp; Reimbursement</label>
                </value>
                <value>
                    <fullName>Safety &amp; Risk Management</fullName>
                    <color>#78C953</color>
                    <label>Safety &amp; Risk Management</label>
                </value>
                <value>
                    <fullName>Drug/Clinical Development</fullName>
                    <color>#E27001</color>
                    <label>Drug/Clinical Development</label>
                </value>
                <value>
                    <fullName>Commercial/Marketing</fullName>
                    <color>#A845DC</color>
                    <label>Commercial/Marketing</label>
                </value>
                <value>
                    <fullName>Medical Customer Support</fullName>
                    <color>#F3D904</color>
                    <label>Medical Customer Support</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioritization_Rank__c</fullName>
        <label>Prioritization Rank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A (Critical)</fullName>
                </value>
                <value>
                    <fullName>B (High Importance)</fullName>
                </value>
                <value>
                    <fullName>C (Nice to have)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_TPO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search either by Name or Capability. After selecting lookup, change search choice to &quot;All Fields&quot; to search on capabilities.
If TPO is not listed, search and select *Other* from the list.</inlineHelpText>
        <label>Selected TPO</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>TPO_Location__c.Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <filterItems>
                <field>$User.Username</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.SkipValidation__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Select &apos;All Fields&apos; in order to search by Capability or Location.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TPO_Location__c</referenceTo>
        <relationshipName>RWE_Business_Planning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RWE_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup and add the RWE Partnership related to this Business Planning. Only Approved &amp; Active RWE Partnerships can be selected.</inlineHelpText>
        <label>RWE Partner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>Request__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>RWE_Partnership_Exploration</value>
            </filterItems>
            <filterItems>
                <field>Request__c.Partnership_Status__c</field>
                <operation>equals</operation>
                <value>Approved and Active</value>
            </filterItems>
            <filterItems>
                <field>$Source.SkipValidation__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Request__c</referenceTo>
        <relationshipName>RWE_Business_Planning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank_Order__c</fullName>
        <label>Rank Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Study_Type__c</fullName>
        <label>Study Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Study_Description__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Method Development</fullName>
                </value>
                <value>
                    <fullName>Analytical Measurement Procedure</fullName>
                </value>
                <value>
                    <fullName>Imaging Procedure</fullName>
                </value>
                <value>
                    <fullName>Biometric Procedure</fullName>
                </value>
                <value>
                    <fullName>Test Development Assessment Procedure</fullName>
                </value>
                <value>
                    <fullName>Animal Study</fullName>
                </value>
                <value>
                    <fullName>Cell Study</fullName>
                </value>
                <value>
                    <fullName>Genetic Engineering</fullName>
                </value>
                <value>
                    <fullName>Biochemistry</fullName>
                </value>
                <value>
                    <fullName>Material Development</fullName>
                </value>
                <value>
                    <fullName>Genetic Studies</fullName>
                </value>
                <value>
                    <fullName>Phase I</fullName>
                </value>
                <value>
                    <fullName>Phase II</fullName>
                </value>
                <value>
                    <fullName>Phase III</fullName>
                </value>
                <value>
                    <fullName>Phase IV</fullName>
                </value>
                <value>
                    <fullName>Intervention Study - Field Study</fullName>
                </value>
                <value>
                    <fullName>Intervention Study - Group Study</fullName>
                </value>
                <value>
                    <fullName>Cohort Study - Prospective</fullName>
                </value>
                <value>
                    <fullName>Cohort Study - Historical</fullName>
                </value>
                <value>
                    <fullName>Case Control Study</fullName>
                </value>
                <value>
                    <fullName>Cross-Sectional Study</fullName>
                </value>
                <value>
                    <fullName>Ecological Study</fullName>
                </value>
                <value>
                    <fullName>Monitoring, surveillance</fullName>
                </value>
                <value>
                    <fullName>Description with registry data</fullName>
                </value>
                <value>
                    <fullName>Pharmacokinetics (PK)</fullName>
                </value>
                <value>
                    <fullName>Pharmacodynamics (PD)</fullName>
                </value>
                <value>
                    <fullName>Toxicology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SkipValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created to skip validation</description>
        <label>SkipValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Business_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self-Lookup to obtain the Financial BP for this current BP(which is source of Studies)</description>
        <label>Related Study/Project</label>
        <referenceTo>Business_Planning__c</referenceTo>
        <relationshipName>RWE_Source_BP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_Difference__c</fullName>
        <formula>IF(ISBLANK(Study__r.Date_Active__c) , Today() -  Estimated_Start_Date__c , Study__r.Date_Active__c -  Estimated_Start_Date__c )</formula>
        <inlineHelpText>Days between Anticipated Start Date to Today, or until the Study moved to Active Status.</inlineHelpText>
        <label>Start Date Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Information__c</fullName>
        <label>Status Information</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Study__r.Project_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Study Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Description__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Classification__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Study</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Theoretical</fullName>
                </value>
                <value>
                    <fullName>Therapy Study</fullName>
                </value>
                <value>
                    <fullName>Prognostic Study</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Study</fullName>
                </value>
                <value>
                    <fullName>Observational Study w/ Drugs</fullName>
                </value>
                <value>
                    <fullName>Secondary Data Analysis</fullName>
                </value>
                <value>
                    <fullName>Case Series</fullName>
                </value>
                <value>
                    <fullName>Single Case Report</fullName>
                </value>
                <value>
                    <fullName>Experimental</fullName>
                </value>
                <value>
                    <fullName>Observational</fullName>
                </value>
                <value>
                    <fullName>Meta Analysis</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Systematic</fullName>
                </value>
                <value>
                    <fullName>Simple (Narrative)</fullName>
                </value>
                <value>
                    <fullName>In Vivo</fullName>
                </value>
                <value>
                    <fullName>In Vitro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Project_Stage__c</fullName>
        <formula>TEXT(Study__r.Study_Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Study/Project Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Region__c</fullName>
        <inlineHelpText>Choose the region that benefits from the study/project.  If multiple regions benefit, then choose &quot;Global&quot;.</inlineHelpText>
        <label>What region benefits from Study/Project?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EUCAN</fullName>
                    <color>#0B6FCE</color>
                    <label>EUCAN</label>
                </value>
                <value>
                    <fullName>Emerging Markets</fullName>
                    <color>#78C953</color>
                    <label>Emerging Markets</label>
                </value>
                <value>
                    <fullName>Japan</fullName>
                    <color>#E27001</color>
                    <label>Japan</label>
                </value>
                <value>
                    <fullName>US</fullName>
                    <color>#A845DC</color>
                    <label>US</label>
                </value>
                <value>
                    <fullName>Global (Multiple Regions)</fullName>
                    <color>#F3D904</color>
                    <label>Global (Multiple Regions)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Sub_Type__c</fullName>
        <inlineHelpText>Choose the appropriate sub type depending on the type.</inlineHelpText>
        <label>Study Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Study_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Data Collection</fullName>
                    <color>#0B6FCE</color>
                    <label>Primary Data Collection</label>
                </value>
                <value>
                    <fullName>Secondary Use of Data</fullName>
                    <color>#78C953</color>
                    <label>Secondary Use of Data</label>
                </value>
                <value>
                    <fullName>Primary Data Collection and Secondary Use of Data</fullName>
                    <color>#E27001</color>
                    <label>Primary Data Collection and Secondary Use of Data</label>
                </value>
                <value>
                    <fullName>Budget Impact Model</fullName>
                    <color>#A845DC</color>
                    <label>Budget Impact Model</label>
                </value>
                <value>
                    <fullName>CE/Global Pharmacoeconomic Model</fullName>
                    <color>#F3D904</color>
                    <label>CE/Global Pharmacoeconomic Model</label>
                </value>
                <value>
                    <fullName>Early Phase Economic Model</fullName>
                    <color>#A53711</color>
                    <label>Early Phase Economic Model</label>
                </value>
                <value>
                    <fullName>With Drug</fullName>
                    <color>#66E9BD</color>
                    <label>With Drug</label>
                </value>
                <value>
                    <fullName>Without Drug</fullName>
                    <color>#0B24BE</color>
                    <label>Without Drug</label>
                </value>
                <value>
                    <fullName>Planned</fullName>
                    <color>#419249</color>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Post Hoc</fullName>
                    <color>#B6E32E</color>
                    <label>Post Hoc</label>
                </value>
                <value>
                    <fullName>BIM and CE</fullName>
                    <color>#641CCF</color>
                    <label>BIM and CE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Type__c</fullName>
        <inlineHelpText>Choose the Type of Study or Project</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BPType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Board</fullName>
                    <color>#0B6FCE</color>
                    <label>Ad Board</label>
                </value>
                <value>
                    <fullName>Analysis</fullName>
                    <color>#78C953</color>
                    <label>Analysis</label>
                </value>
                <value>
                    <fullName>Analysis Using Lilly Trial Data</fullName>
                    <color>#330000</color>
                    <label>Analysis Using Lilly Trial Data</label>
                </value>
                <value>
                    <fullName>Clinical Section (HTA Toolkit)</fullName>
                    <color>#E27001</color>
                    <label>Clinical Section (HTA Toolkit)</label>
                </value>
                <value>
                    <fullName>Communication</fullName>
                    <color>#A845DC</color>
                    <label>Communication</label>
                </value>
                <value>
                    <fullName>Consultation</fullName>
                    <color>#F3D904</color>
                    <label>Consultation</label>
                </value>
                <value>
                    <fullName>Data Collection</fullName>
                    <color>#A53711</color>
                    <label>Data Collection</label>
                </value>
                <value>
                    <fullName>Data Purchase</fullName>
                    <color>#66E9BD</color>
                    <label>Data Purchase</label>
                </value>
                <value>
                    <fullName>Early Phase Work</fullName>
                    <color>#0B24BE</color>
                    <label>Early Phase Work</label>
                </value>
                <value>
                    <fullName>Exploration</fullName>
                    <color>#419249</color>
                    <label>Exploration</label>
                </value>
                <value>
                    <fullName>HTA Advice</fullName>
                    <color>#B6E32E</color>
                    <label>HTA Advice</label>
                </value>
                <value>
                    <fullName>HTA toolkit</fullName>
                    <color>#641CCF</color>
                    <label>HTA toolkit</label>
                </value>
                <value>
                    <fullName>IT systems/Development</fullName>
                    <color>#F96FB7</color>
                    <label>IT systems/Development</label>
                </value>
                <value>
                    <fullName>Meetings</fullName>
                    <color>#2F5D85</color>
                    <label>Meetings</label>
                </value>
                <value>
                    <fullName>Membership</fullName>
                    <color>#AFCADF</color>
                    <label>Membership</label>
                </value>
                <value>
                    <fullName>Meta-Analysis</fullName>
                    <color>#8F6429</color>
                    <label>Meta-Analysis</label>
                </value>
                <value>
                    <fullName>Meta-Analysis &amp; Systematic Literature Review</fullName>
                    <color>#EFAE73</color>
                    <label>Meta-Analysis &amp; Systematic Literature Review</label>
                </value>
                <value>
                    <fullName>Model Adaptation</fullName>
                    <color>#57F17C</color>
                    <label>Model Adaptation</label>
                </value>
                <value>
                    <fullName>Modeling</fullName>
                    <color>#DDDDDD</color>
                    <label>Modeling</label>
                </value>
                <value>
                    <fullName>Model Update</fullName>
                    <color>#FF6666</color>
                    <label>Model Update</label>
                </value>
                <value>
                    <fullName>Observational Study</fullName>
                    <color>#FF9966</color>
                    <label>Observational Study</label>
                </value>
                <value>
                    <fullName>Payer Dossiers</fullName>
                    <color>#FFFF66</color>
                    <label>Payer Dossiers</label>
                </value>
                <value>
                    <fullName>Placeholder</fullName>
                    <color>#66FF99</color>
                    <label>Placeholder</label>
                </value>
                <value>
                    <fullName>Policy</fullName>
                    <color>#33FFFF</color>
                    <label>Policy</label>
                </value>
                <value>
                    <fullName>Post Launch Work</fullName>
                    <color>#66FFFF</color>
                    <label>Post Launch Work</label>
                </value>
                <value>
                    <fullName>Pragmatic Trial</fullName>
                    <color>#9999FF</color>
                    <label>Pragmatic Trial</label>
                </value>
                <value>
                    <fullName>Publication</fullName>
                    <color>#FF99FF</color>
                    <label>Publication</label>
                </value>
                <value>
                    <fullName>Registry</fullName>
                    <color>#BBBBBB</color>
                    <label>Registry</label>
                </value>
                <value>
                    <fullName>Regulatory Intelligence</fullName>
                    <color>#FF0000</color>
                    <label>Regulatory Intelligence</label>
                </value>
                <value>
                    <fullName>Strategy</fullName>
                    <color>#FF9900</color>
                    <label>Strategy</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to approved Study/Project record</inlineHelpText>
        <label>Study</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Business Planning</relationshipLabel>
        <relationshipName>RWE_Business_Plannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TPO_will_sub_contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TPO will sub-contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_Primary__c</fullName>
        <label>Therapeutic Area (Primary)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alzheimer’s &amp; NDD</fullName>
                    <color>#0B6FCE</color>
                    <label>Alzheimer’s &amp; NDD</label>
                </value>
                <value>
                    <fullName>Bone, Muscle, Joint</fullName>
                    <color>#78C953</color>
                    <label>Bone, Muscle, Joint</label>
                </value>
                <value>
                    <fullName>Cardiovascular</fullName>
                    <color>#E27001</color>
                    <label>Cardiovascular</label>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                    <color>#A845DC</color>
                    <label>Diabetes</label>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                    <color>#F3D904</color>
                    <label>Immunology</label>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                    <color>#A53711</color>
                    <label>Oncology</label>
                </value>
                <value>
                    <fullName>Psychiatry &amp; Pain</fullName>
                    <color>#66E9BD</color>
                    <label>Psychiatry &amp; Pain</label>
                </value>
                <value>
                    <fullName>Urology and Men’s Health</fullName>
                    <color>#0B24BE</color>
                    <label>Urology and Men’s Health</label>
                </value>
                <value>
                    <fullName>Non Therapeutic Area Specific</fullName>
                    <color>#419249</color>
                    <label>Non Therapeutic Area Specific</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>Enter a descriptive title for the item (e.g. one that might be used for a journal article)</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Local_Identifier__c</fullName>
        <inlineHelpText>Include any local identifiers used specifically for a function or area. i.e. the BCM ID</inlineHelpText>
        <label>Unique Local Identifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_HCPs_be_paid_for_participation__c</fullName>
        <label>Will HCPs be paid for participation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not Sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isEdit__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isEdit</label>
        <type>Checkbox</type>
    </fields>
    <label>Business Planning</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>